Multiple refactor changes